<resources>
    <string name="app_name">TokoGame</string>
    <string name="nav_header_title">Rizky Alfikri</string>
    <string name="nav_header_subtitle">rizkyalfikri@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Game Store</string>
    <string name="menu_gallery">Wishlist</string>
    <string name="menu_slideshow">Settings</string>
    <string name="popular">Popular</string>
    <string name="rating">Rating</string>
    <string name="release">Release</string>
    <string name="_50_0">$ 50.0</string>
    <string name="shared_element_dialog_fragment">shared_element_dialog_fragment</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="main_store">Game Store</string>
    <string name="about">About</string>
    <string name="buy">Buy</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="platform">Platform</string>
    <string name="metracritic">Metracritic</string>
    <string name="genre">Genre</string>
    <string name="release_date">Release Date</string>
    <string name="developer">Developer</string>
    <string name="publisher">Publisher</string>
    <string name="playtime">Playtime</string>
    <string name="age_rating">Age Rating</string>
    <string name="tags">Tags</string>
    <string name="rattings">Rattings</string>
    <string name="recomended">Recommended</string>
    <string name="exceptional">Exceptional</string>
    <string name="meh">Meh</string>
    <string name="skip">Skip</string>
    <string name="achievments"><u>Achievements</u></string>
    <string name="no_data">No data</string>
    <string name="hours">Hours</string>
    <string name="vote">votes</string>
    <string name="view_all_achievments">View all achievements</string>
    <string name="total_achievments">achievements</string>
    <string name="screenshot"><u>Screenshot</u></string>
    <string name="view_more">View more</string>
    <string name="videos"><u>Videos</u></string>
    <string name="game_similar_visualy"><u>Game Similar Visualy</u></string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="show_less">Show less</string>
    <string name="show_more">Show more</string>
    <string name="failed_add_favorite">Failed add game to favorite list</string>
    <string name="success_add_favorite">Success add game to favorite list</string>
    <string name="failed_remove_favorite">Failed remove game to favorite list</string>
    <string name="success_remove_favorite">Success remove game from favorite list</string>
    <string name="failed_add_cart">Failed add game to cart list</string>
    <string name="success_add_cart">Success add game to cart list</string>
    <string name="_0">0</string>
    <string name="undo">Undo</string>
    <string name="split_confirmation_install_title">Download new feature</string>
    <string name="split_confirmation_install_description">This feature needs to be downloaded from Google Play before you can use it. Downloading over a mobile network or while roaming may cause additional charges.</string>
    <string name="split_downloading_title">Downloading feature</string>
    <string name="split_downloading_description">This may take several minutes</string>
    <string name="wishlist">Wishlist</string>
    <string name="setting">Setting</string>
    <string name="Oops">Oops seems like you haven\'t add any game into your wishlist</string>
    <string name="title_dynamic_game_favorite">Game Favorite Module</string>
    <string name="title_dynamic_game_cart">Game Cart Module</string>
</resources>